--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
             />
         <activity android:name=".reach"/>
         <activity android:name=".Events"/>
+        <activity android:name=".ListEvents"/>
 
     </application>
 
