--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <application
         android:name=".ParseApplication"
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.NoActionBar"
@@ -24,6 +25,7 @@
         <uses-library android:name="com.google.android.maps"/>
         <activity
             android:name=".MainActivity"
+
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,7 +38,7 @@
         <activity android:name=".reach"/>
         <activity android:name=".Events"/>
         <activity android:name=".ListEvents"/>
-
+        <activity android:name=".DetailEvents"/>
     </application>
 
 
