--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,14 +6,14 @@
         android:name=".ParseApplication"
         android:allowBackup="true"
         android:hardwareAccelerated="false"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/bms"
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.NoActionBar"
 
         >
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBEJeeb5iGkiuq7fmZD0_eztSBBWL-t4ew"/>
+            android:value="AIzaSyBEJeeb5iGkiuq7fmZD0_eztSBBWL-t4ew"/>R
 
         <uses-permission android:name="android.permission.INTERNET"/>
         <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -39,6 +39,11 @@
         <activity android:name=".Events"/>
         <activity android:name=".ListEvents"/>
         <activity android:name=".DetailEvents"/>
+        <activity android:name=".appTeam"/>
+
+        <activity android:name=".RegisterEvents"/>
+        <activity android:name=".seminar"/>
+        <activity android:name=".workshop"/>
     </application>
 
 
